Push final: OpenAPI & Deploy